# rofa

./: .gitignore  LICENSE  README.rst  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py  test.py
examples/: 1. Getting Started.ipynb
rofa/: __init__.py  constants.py  exceptions.py  logger.py  plotter.py  simulator.py  store.py  utils.py  weight_model.py
