[tool.poetry]
name = "rofa"
version = "0.1.4"
description = "**Rofa** is an easy backtesting library for finding Roubst Factor"
authors = ["sjquant <seonujang92@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/sjquant/rofa"
keywords = ["quant", "backtest"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^0.25.3"
seaborn = "^0.9.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
rope = "^0.14.0"
ipython = "^7.10.2"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
